--- a/gs.css
+++ b/gs.css
@@ -70,13 +70,21 @@
 
 
 
-/*table
+table
 {
+    border-collapse: collapse;
     text-align: center;
-    border: 1px solid black;
+    border: 2px solid red;
     color: red;
 }
 
+td, th {
+    border: 1px solid #dddddd;
+    text-align: center;
+    padding: 8px;
+    margin: 20px;
+  }
+
 tr:nth-child(even) {
-    background-color: #f2f2f2;
-}*/
+    background-color: #b5aeae;
+}
